Add notification utilities and enforce RBAC

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "jsx": "react-native"
   },
-  "include": ["app", "App.tsx", "expo-env.d.ts"]
+  "include": ["app", "App.tsx", "notifications/**/*", "expo-env.d.ts"]
 }
