--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@countrtop/api-client": "workspace:*",
     "@countrtop/models": "workspace:*",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~51.0.0",
+    "expo-device": "~6.0.0",
+    "expo-notifications": "~0.30.0",
     "expo-status-bar": "~1.12.0",
     "react": "18.3.1",
     "react-native": "0.74.1"
