Add payments and loyalty services

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@countrtop/api-client": "workspace:*",
+    "@countrtop/functions": "workspace:*",
     "@countrtop/models": "workspace:*",
     "@countrtop/ui": "workspace:*",
     "next": "14.2.6",
