--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,7 +2,7 @@
   "name": "@countrtop/mobile",
   "version": "0.1.0",
   "private": true,
-  "main": "expo/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,15 +13,15 @@
     "@countrtop/api-client": "workspace:*",
     "@countrtop/models": "workspace:*",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "expo": "~51.0.0",
+    "expo": "~54.0.29",
     "expo-device": "~6.0.0",
-    "expo-notifications": "~0.30.0",
+    "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.0",
-    "react": "18.3.1",
-    "react-native": "0.74.1"
+    "react": "18.2.0",
+    "react-native": "0.74.5"
   },
   "devDependencies": {
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.2.79",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.3.3"
   }
