--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@countrtop/mobile",
+  "name": "@countrtop/customer-mobile",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
@@ -7,6 +7,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "build": "expo export --platform all",
     "lint": "eslint 'app/**/*.{ts,tsx}'"
   },
   "dependencies": {
