--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@countrtop/models": "workspace:*",
     "@supabase/supabase-js": "^2.45.6"
   }
 }
