--- a/apps/vendor-admin-web/.env.example
+++ b/apps/vendor-admin-web/.env.example
@@ -1,4 +1,3 @@
 NEXT_PUBLIC_USE_MOCK_DATA=true
 STRIPE_SECRET_KEY=sk_test_replace_me
-CHECKOUT_SUCCESS_URL=https://countrtop.app/success
-CHECKOUT_CANCEL_URL=https://countrtop.app/cancel
+STRIPE_WEBHOOK_SECRET=whsec_replace_me
