--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -11,11 +11,7 @@
     "lint": "eslint 'app/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@countrtop/api-client": "workspace:*",
-    "@countrtop/models": "workspace:*",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
     "expo": "~54.0.29",
     "expo-device": "~6.0.0",
     "expo-notifications": "~0.28.19",
@@ -23,7 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-webview": "^13.6.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
