--- a/apps/customer-web/package.json
+++ b/apps/customer-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@countrtop/vendor-admin-web",
+  "name": "@countrtop/customer-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
   "dependencies": {
     "@countrtop/data": "workspace:*",
     "@countrtop/models": "workspace:*",
-    "@countrtop/ui": "workspace:*",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
