--- a/apps/vendor-ops-mobile/package.json
+++ b/apps/vendor-ops-mobile/package.json
@@ -11,17 +11,11 @@
     "lint": "eslint 'app/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@countrtop/data": "workspace:*",
-    "@countrtop/models": "workspace:*",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~54.0.29",
     "expo-status-bar": "~1.12.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
