Phase 1: customer web menu, cart, checkout mock

--- a/apps/customer-web/.env.example
+++ b/apps/customer-web/.env.example
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_USE_MOCK_DATA=true
 DEFAULT_VENDOR_SLUG=sunset
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SQUARE_ENVIRONMENT=sandbox
+SQUARE_ACCESS_TOKEN=
+SQUARE_ACCESS_TOKEN_SQUARE_DEMO=
