--- a/apps/customer-web/package.json
+++ b/apps/customer-web/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@countrtop/data": "workspace:*",
     "@countrtop/models": "workspace:*",
+    "@supabase/supabase-js": "^2.45.6",
     "next": "14.2.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "square": "^37.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
