--- a/apps/customer-web/.env.example
+++ b/apps/customer-web/.env.example
@@ -1,8 +1,12 @@
 NEXT_PUBLIC_USE_MOCK_DATA=true
 DEFAULT_VENDOR_SLUG=sunset
+DEFAULT_VENDOR_ID=vendor_cafe
+DEFAULT_VENDOR_NAME=Sunset Coffee Cart
+DEFAULT_VENDOR_SQUARE_CREDENTIAL_REF=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+SQUARE_LOCATION_ID=
 SQUARE_ENVIRONMENT=sandbox
 SQUARE_ACCESS_TOKEN=
 SQUARE_ACCESS_TOKEN_SQUARE_DEMO=
