phase 1 complete; pipeline works

--- a/apps/customer-web/.env.example
+++ b/apps/customer-web/.env.example
@@ -10,3 +10,5 @@ SQUARE_LOCATION_ID=
 SQUARE_ENVIRONMENT=sandbox
 SQUARE_ACCESS_TOKEN=
 SQUARE_ACCESS_TOKEN_SQUARE_DEMO=
+SQUARE_WEBHOOK_SIGNATURE_KEY=
+SQUARE_WEBHOOK_URL=
