--- a/apps/customer-web/.env.example
+++ b/apps/customer-web/.env.example
@@ -6,6 +6,9 @@ DEFAULT_VENDOR_SQUARE_CREDENTIAL_REF=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_APPLE_SIGNIN=false
 SQUARE_LOCATION_ID=
 SQUARE_ENVIRONMENT=sandbox
 SQUARE_ACCESS_TOKEN=
