phase three in progress, customer mobile properly renders page.

--- a/apps/vendor-admin-web/.env.example
+++ b/apps/vendor-admin-web/.env.example
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_USE_MOCK_DATA=true
 DEFAULT_VENDOR_SLUG=sunset
+DEFAULT_VENDOR_ID=vendor_cafe
+DEFAULT_VENDOR_NAME=Sunset Coffee Cart
+DEFAULT_VENDOR_SQUARE_CREDENTIAL_REF=
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
