vendor insights, ops queue, and push notifications all functional, tidied up customer mobile UI

--- a/apps/customer-mobile/app.json
+++ b/apps/customer-mobile/app.json
@@ -3,8 +3,9 @@
     "name": "CountrTop Customer",
     "slug": "countrtop-customer",
     "version": "0.1.0",
+    "scheme": "countrtop",
     "orientation": "portrait",
-    "sdkVersion": "51.0.0",
+    "sdkVersion": "54.0.0",
     "platforms": ["ios", "android"],
     "assetBundlePatterns": ["**/*"],
     "ios": {
