--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -11,19 +11,20 @@
     "lint": "eslint 'app/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "expo": "~54.0.29",
-    "expo-device": "~6.0.0",
-    "expo-notifications": "~0.28.19",
-    "expo-status-bar": "~1.12.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-webview": "^13.8.6"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo": "~54.0.30",
+    "expo-device": "~8.0.10",
+    "expo-notifications": "~0.32.15",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
+    "@types/react": "^19.1.17",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   }
 }
