--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "build": "expo export --platform all",
-    "lint": "eslint 'app/**/*.{ts,tsx}'"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
