--- a/apps/vendor-ops-mobile/package.json
+++ b/apps/vendor-ops-mobile/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "build": "expo export --platform all",
-    "lint": "eslint 'app/**/*.{ts,tsx}'"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "expo": "~54.0.30",
