feat: implement code improvements audit (12 prompts)
- Add webhook signature validation resilience with try-catch and alerting
- Implement ErrorBoundary components for all apps (web & mobile)
- Optimize Supabase queries with field limiting, caching, and performance logging
- Create shared useAuth hook to consolidate authentication logic
- Add environment variable validation with startup checks
- Implement rate limiting for API routes (catalog: 100/min, checkout: 10/min)
- Consolidate duplicate type definitions into models package
- Configure Supabase connection pooling for web and mobile apps
- Add retry logic with exponential backoff and circuit breaker for Square API
- Implement structured logging with pino (context-aware logging)
- Create OptimizedImage component with expo-image and lazy loading support
- Add health check endpoints for monitoring (/api/health)

All changes are backward compatible and include comprehensive error handling.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.28.4"
+    "@babel/runtime": "^7.28.4",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3"
   }
 }
