--- a/apps/customer-mobile/package.json
+++ b/apps/customer-mobile/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.30",
     "expo-device": "~8.0.10",
+    "expo-image": "^3.0.11",
     "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
