Fix Vercel deployment issues
- Add missing dependencies (pino, square, @supabase/supabase-js)
- Fix TypeScript type errors in index.tsx and health.ts
- Remove unused imports and types
- Configure Next.js webpack to exclude React Native modules from web builds
- Create logger-only export to avoid Square SDK in Edge Runtime
- Make logger imports lazy to prevent bundling issues in middleware
- Fix EdgeRuntime type check with @ts-ignore
- Update OptimizedImage to handle web environments gracefully

All build errors resolved. Ready for Vercel deployment.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "null-loader": "^4.0.1",
     "prettier": "^3.3.3",
     "typescript": "^5.3.3"
   },
