--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -5,11 +5,20 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "source": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./logger": "./src/logger.ts",
+    "./logger-only": "./src/logger-only.ts",
+    "./square": "./src/square.ts"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json --emitDeclarationOnly",
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@countrtop/models": "workspace:*"
+    "@countrtop/models": "workspace:*",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
+    "square": "^37.0.1"
   }
 }
