--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
   "peerDependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "@supabase/supabase-js": "^2.45.6"
   },
   "devDependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "@supabase/supabase-js": "^2.45.6"
   }
 }
