Add order fulfillment status updates to vendor admin
- Add new order_snapshots columns: fulfillment_status, ready_at, completed_at, updated_at, customer_display_name, pickup_label
- Update Database types and mapping layer to support new fields
- Add updateOrderSnapshotStatus method to DataClient interface
- Implement status update API route: POST /api/orders/[orderId]/status
- Add UI in vendor admin order list to mark orders as READY or COMPLETE
- Enforce vendor scoping: orders can only be updated by their vendor
- Add status badges and action buttons with loading states

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -7,7 +7,8 @@
   "source": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json --emitDeclarationOnly",
-    "lint": "eslint 'src/**/*.{ts,tsx}'"
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "gen:types": "supabase gen types typescript --project-id ${SUPABASE_PROJECT_ID:-} > src/database.types.ts || echo 'Error: SUPABASE_PROJECT_ID env var required, or install Supabase CLI and configure project'"
   },
   "dependencies": {
     "@countrtop/models": "workspace:*",
