--- a/apps/vendor-admin-web/package.json
+++ b/apps/vendor-admin-web/package.json
@@ -12,6 +12,7 @@
     "@countrtop/data": "workspace:*",
     "@countrtop/models": "workspace:*",
     "@countrtop/ui": "workspace:*",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.45.6",
     "next": "14.2.6",
     "react": "18.3.1",
