Milestone 0: Create KDS web app with PWA installability
- Create new Next.js app at apps/kds-web
- Add base routes: index, login, vendors/[slug], access-denied
- Implement authentication with session persistence
- Add PWA manifest and meta tags for iPad installability
- Add API routes for session management and vendor lookup
- Update root package.json with kds-web scripts

Ready for deployment to kds.staging.countrtop.com
Icons (192x192 and 512x512) need to be added to public/icons/ before deployment

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev:customer": "pnpm --filter @countrtop/customer-mobile start",
     "dev:vendor-ops": "pnpm --filter @countrtop/vendor-ops-mobile start",
     "dev:vendor-admin": "pnpm --filter @countrtop/vendor-admin-web dev",
+    "dev:kds": "pnpm --filter @countrtop/kds-web dev",
     "build:customer-web": "pnpm --filter @countrtop/customer-web build",
     "build:customer": "pnpm --filter @countrtop/customer-mobile build",
     "build:vendor-ops": "pnpm --filter @countrtop/vendor-ops-mobile build",
     "build:vendor-admin": "pnpm --filter @countrtop/vendor-admin-web build",
+    "build:kds": "pnpm --filter @countrtop/kds-web build",
     "build": "pnpm -r run build",
     "lint": "pnpm -r run lint",
     "test": "pnpm -r test --if-present",
