Fix KDS web app for Vercel deployment
- Add apps/kds-web to pnpm-workspace.yaml (critical for workspace recognition)
- Add ESLint config to allow styled-jsx jsx property
- Fix apostrophe escaping in access-denied page
- Add vercel.json with monorepo build configuration

Vercel setup instructions:
- Root Directory: (leave empty or set to repo root)
- Build Command: pnpm --filter @countrtop/kds-web build
- Install Command: pnpm install
- Output Directory: apps/kds-web/.next

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,4 +3,5 @@ packages:
   - "apps/customer-mobile"
   - "apps/vendor-ops-mobile"
   - "apps/vendor-admin-web"
+  - "apps/kds-web"
   - "packages/*"
