--- a/apps/kds-web/vercel.json
+++ b/apps/kds-web/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm --filter @countrtop/kds-web build",
   "installCommand": "pnpm install",
-  "outputDirectory": "apps/kds-web/.next"
+  "outputDirectory": ".next"
 }
 
