MILESTONE 3: Polling reconciler for Square orders
- Add listSquareOrdersUpdatedSince helper to Square API client
- Create reconcileSquareOrdersForLocation core reconciliation function
- Add manual polling script scripts/pollSquareOrders.ts
- Add Vercel cron route /api/cron/poll-square for scheduled polling
- Process orders with concurrency control (5 at a time)
- Track statistics: processed, createdTickets, updatedTickets, errors
- Support both env var and database-driven location discovery
- Idempotent and safe to run repeatedly
- Recover missed orders and reconcile state changes

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "pnpm -r run build",
     "lint": "pnpm -r run lint",
     "test": "pnpm -r test --if-present",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "poll:square": "tsx scripts/pollSquareOrders.ts"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
