--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dev:vendor-ops": "pnpm --filter @countrtop/vendor-ops-mobile start",
     "dev:vendor-admin": "pnpm --filter @countrtop/vendor-admin-web dev",
     "dev:kds": "pnpm --filter @countrtop/kds-web dev",
+    "dev:ops": "pnpm --filter @countrtop/ops-web dev",
     "build:customer-web": "pnpm --filter @countrtop/customer-web build",
     "build:customer": "pnpm --filter @countrtop/customer-mobile build",
     "build:vendor-ops": "pnpm --filter @countrtop/vendor-ops-mobile build",
     "build:vendor-admin": "pnpm --filter @countrtop/vendor-admin-web build",
     "build:kds": "pnpm --filter @countrtop/kds-web build",
+    "build:ops": "pnpm --filter @countrtop/ops-web build",
     "build": "pnpm -r run build",
     "lint": "pnpm -r run lint",
     "test": "pnpm -r test --if-present",
