feat: Add email notifications, error monitoring, and vendor onboarding docs
Email Notifications:
- Added order confirmation email on checkout (via Resend API)
- Added order ready email when KDS marks order as ready
- Beautiful HTML templates matching CountrTop brand
- Gracefully skips if RESEND_API_KEY not configured

Error Monitoring:
- Created @countrtop/monitoring package with Sentry utilities
- initSentry() for app initialization
- captureException(), captureMessage(), setUser() helpers
- Automatic error filtering for noisy events

Documentation:
- docs/VENDOR_ONBOARDING.md - Complete vendor setup guide
- docs/ENV_SETUP.md - Environment variables reference
- Covers POS setup, branding, KDS workflow, team management

Packages:
- @countrtop/email - Email templates and sending (Resend)
- @countrtop/monitoring - Sentry error tracking

--- a/apps/customer-web/package.json
+++ b/apps/customer-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@countrtop/data": "workspace:*",
+    "@countrtop/email": "workspace:*",
     "@countrtop/models": "workspace:*",
     "@supabase/supabase-js": "^2.45.6",
     "next": "14.2.6",
