fix: Bypass Vercel Next.js auto-detection for marketing-web
Use explicit install/build commands instead of framework auto-detection
to work around pnpm workspace detection issues

--- a/apps/marketing-web/vercel.json
+++ b/apps/marketing-web/vercel.json
@@ -1,5 +1,7 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "next build",
-  "outputDirectory": ".next"
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "installCommand": "pnpm install",
+  "buildCommand": "pnpm next build",
+  "outputDirectory": ".next",
+  "framework": null
 }
