--- a/apps/marketing-web/vercel.json
+++ b/apps/marketing-web/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "pnpm install",
-  "buildCommand": "pnpm run build",
+  "installCommand": "cd ../.. && pnpm install",
+  "buildCommand": "cd ../.. && pnpm --filter @countrtop/marketing-web run build",
   "outputDirectory": ".next",
   "framework": null
 }
