--- a/apps/marketing-web/package.json
+++ b/apps/marketing-web/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "next": "14.2.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
     "eslint-config-next": "14.2.35",
     "typescript": "^5.3.3"
   }
