--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@babel/runtime": "^7.28.4",
     "next": "14.2.35",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.3"
+    "pino-pretty": "^13.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
