--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "resend": "^3.2.0"
   },
   "devDependencies": {
