--- a/packages/monitoring/package.json
+++ b/packages/monitoring/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
-    "@sentry/nextjs": "^8.0.0"
+    "@sentry/nextjs": "^8.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
